# wick_agent

./: .dockerignore  .gitignore  AGENT_EXECUTION_DEEP_DIVE.md  AGENT_EXECUTION_TRACE.md  AGENT_LOOP.md  ChatInterface.tsx  DEV_WORKFLOW.md  Dockerfile  GO_BASICS.md  GO_CODE_GUIDE.md  HOOKS.md  InputArea.tsx  LICENSE  LoginPage.tsx  MESSAGES.md  NOTICE  TOOLS_EXECUTION.md  WICKFS.md  agents.yaml  auth_routes.py  docker-compose.yml  index.css  index.html  requirements.txt  run.py  server.py  server_conclusion.py  server_tool2.py  wick_agent.md
wick_deep_agent/: .gitignore  1-package-deps.mmd  2-interfaces.mmd  3-hook-sequence.mmd  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  __init__.py  build_wheels.py  pyproject.toml  run_all.py
wick_deep_agent/server/: AGENT_LOOP.md  Dockerfile  SUBAGENTS.md  agents.local.yaml  app.go  auth.go  config.go  config_loader.go  go.mod  main.go  server.go
wick_deep_agent/server/agent/: async_tasks.go  async_tasks_test.go  config.go  events.go  hitl.go  hitl_test.go  hook.go  http_tool.go  loop.go  messages.go  registry.go  state.go  thread.go  tool.go  trace_iface.go  types.go
wick_deep_agent/server/backend/: backend.go  backend_test.go  daemon.go  docker.go  local.go  sandbox.go
wick_deep_agent/server/handlers/: backends.go  builtin_tools.go  events.go  handlers.go  pptx.go  pptx_chart.go  pptx_chart_test.go  pptx_layouts.go  pptx_layouts_test.go  pptx_table.go  pptx_table_test.go  pptx_theme.go  pptx_theme_test.go  tool_store.go
wick_deep_agent/server/hooks/: filesystem.go  hitl.go  lazy_skills.go  memory.go  (+7 more)
wick_deep_agent/wick_deep_agent/: __init__.py  cli.py  client.py  flow.py  launcher.py  messages.py  model.py  models.py  tool.py
wick_py/: .dockerignore  Dockerfile  pyproject.toml  start.py
wick_py/examples/: custom_llm.py  gateway_auth.py  server.py  simple_agent.py
wick_py/static/: index.html
wick_py/wick/: __init__.py  _agent.py  _client.py  _runtime.py  _sidecar.py  _tools.py  _types.py
(+305 files in other folders)
