[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wick-deep-agent"
version = "0.1.1"
description = "Python client and server manager for the wick_go agent server."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Deepankar", email = "deepankar@users.noreply.github.com" },
]
keywords = ["agent", "llm", "wick"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.4",
]

[project.urls]
Repository = "https://github.com/deepankar/wick_agent"

[project.scripts]
wick-agent = "wick_deep_agent.cli:main"

[tool.setuptools.packages.find]
include = ["wick_deep_agent*"]

[tool.setuptools.package-data]
wick_deep_agent = ["py.typed", "bin/*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.mypy]
python_version = "3.9"
strict = true
