[project]
name = "wick"
version = "0.1.0"
description = "Python SDK for wick_server — define agents with custom tools and LLM providers"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "httpx>=0.25",
    "pydantic>=2.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.30"]
openai = ["openai>=1.0"]

[tool.setuptools.packages.find]
include = ["wick*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
